--- a/index.html
+++ b/index.html
@@ -5,16 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="/css/main.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <script defer src="/js/mian.js"></script>
   </head>
   <body>
-    <h1>FreeSlots</h1>
+    <h1 class="animate__animated animate__bounce">FreeSlots</h1>
     <main>
-      <section id="slotScreen">
-        <div id="firstSlotBox"></div>
-        <div id="secondSlotBox"></div>
-        <div id="thirdSlotBox"></div>
-      </section>
+      <div class="slotsWithRedLine">
+        <section id="slotScreen">
+          <div id="firstSlotBox"></div>
+          <div id="secondSlotBox"></div>
+          <div id="thirdSlotBox"></div>
+        </section>
+        <div class="redLine"></div>
+      </div>
 
       <section id="scoreText">
         <p>Winner Paid</p>
@@ -23,9 +30,9 @@
       </section>
 
       <section id="scoreScreen">
-        <div id="winnerPaid">1</div>
-        <div id="credits">1</div>
-        <div id="creditsPlayed">1</div>
+        <div id="winnerPaid" class="digits"></div>
+        <div id="credits" class="digits"></div>
+        <div id="creditsPlayed" class="digits"></div>
       </section>
 
       <section id="buttons">
