added replay button

--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
           <div id="secondSlotBox"></div>
           <div id="thirdSlotBox"></div>
         </section>
-        <div class="redLine"></div>
+        <div class="redLine">
+          <button id="replay">Replay</button>
+          <button id="sound">
+            <img src="./imgs/musical-note.png" alt="" />
+          </button>
+        </div>
       </div>
 
       <section id="scoreText">
