spinButton bug fixed

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <section id="buttons">
         <button id="betOne">BET ONE</button>
         <button id="betMax">BET MAX</button>
-        <button id="spin">SPIN REELS</button>
+        <button id="spin">SHUFFLE</button>
       </section>
     </main>
   </body>
