--- a/index.html
+++ b/index.html
@@ -53,7 +53,114 @@
       </main>
     </div>
     <div class="secondPage">
-      <img src="./src/imgs/table.jpg" alt="" />
+      <!-- <img src="./src/imgs/table.jpg" alt="" /> -->
+      <table border="1">
+        <thead>
+          <tr>
+            <th></th>
+            <th>1st credit</th>
+            <th>2nd credit</th>
+            <th>3rd credit</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>
+              <img src="./src/table-imgs/casino-chip.png" alt="casino-chip" />
+              <img src="./src/table-imgs/casino-chip.png" alt="casino-chip" />
+              <img src="./src/table-imgs/casino-chip.png" alt="casino-chip" />
+            </td>
+            <td>100</td>
+            <td>200</td>
+            <td>300</td>
+          </tr>
+          <tr>
+            <td>
+              <img src="./src/table-imgs/seven.png" alt="7" /><img
+                src="./src/table-imgs/seven.png"
+                alt="7"
+              /><img src="./src/table-imgs/seven.png" alt="7" />
+            </td>
+            <td>50</td>
+            <td>100</td>
+            <td>150</td>
+          </tr>
+          <tr>
+            <td>
+              <img src="./src/table-imgs/diamond.png" alt="diamond" /><img
+                src="./src/table-imgs/diamond.png"
+                alt="diamond"
+              /><img src="./src/table-imgs/diamond.png" alt="diamond" />
+            </td>
+            <td>30</td>
+            <td>60</td>
+            <td>90</td>
+          </tr>
+          <tr>
+            <td>
+              <img src="./src/table-imgs/machine.png" alt="slot-machine7" /><img
+                src="./src/table-imgs/machine.png"
+                alt="slot-machine7"
+              /><img src="./src/table-imgs/machine.png" alt="slot-machine7" />
+            </td>
+            <td>20</td>
+            <td>40</td>
+            <td>60</td>
+          </tr>
+          <tr>
+            <td>
+              <img src="./src/table-imgs/lemon.png" alt="lemon" /><img
+                src="./src/table-imgs/lemon.png"
+                alt="lemon"
+              /><img src="./src/table-imgs/lemon.png" alt="lemon" />
+            </td>
+            <td>10</td>
+            <td>20</td>
+            <td>30</td>
+          </tr>
+          <tr>
+            <td>
+              <img src="./src/table-imgs/apple.png" alt="apple" />
+              <img src="./src/table-imgs/apple.png" alt="apple" />
+              <img src="./src/table-imgs/apple.png" alt="apple" />
+            </td>
+            <td>10</td>
+            <td>20</td>
+            <td>30</td>
+          </tr>
+          <tr>
+            <td>
+              <img src="./src/table-imgs/cherries.png" alt=" 🍒" /><img
+                src="./src/table-imgs/cherries.png"
+                alt=" 🍒"
+              /><img src="./src/table-imgs/cherries.png" alt=" 🍒" />
+            </td>
+            <td>10</td>
+            <td>20</td>
+            <td>30</td>
+          </tr>
+
+          <tr>
+            <td>
+              <img src="./src/table-imgs/cherries.png" alt=" 🍒" /><img
+                src="./src/table-imgs/cherries.png"
+                alt=" 🍒"
+              />
+            </td>
+            <td>5</td>
+            <td>10</td>
+            <td>15</td>
+          </tr>
+          <tr>
+            <td>
+              <img src="./src/table-imgs/cherries.png" alt="ANY ONE 🍒" />
+            </td>
+            <td>2</td>
+            <td>4</td>
+            <td>6</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
   </body>
 </html>
