deploy 2nd page again

--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
       </main>
     </div>
     <div class="secondPage">
-      <!-- <img src="./src/imgs/table.jpg" alt="" /> -->
-      <table border="1">
+      <table>
         <thead>
           <tr>
             <th></th>
