readme.md added

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <section id="buttons">
           <button id="playTable">
-            <img src="./src/imgs/table.png" alt="" />
+            <img src="./src/imgs/table.png" alt="play table" />
           </button>
           <button id="betOne">BET ONE</button>
           <button id="betMax">BET MAX</button>
