--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
-    <script defer src="js/mian.js"></script>
+    <script defer src="js/main.js"></script>
   </head>
   <body>
     <div class="firstPage">
