--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
             <div id="secondSlotBox"></div>
             <div id="thirdSlotBox"></div>
           </section>
+
+          <!-- <div id="buttonsOnlyForSmallScreen">
+          <button id="replaySmallScreen">RESET</button>
+            <button id="soundSmallScreen">
+              <img id="musicImgSmallScreen" src="./src/imgs/music-on.png" alt="music" />
+            </button>
+          </div> -->
+
           <div class="redLine">
             <button id="replay">RESET</button>
             <button id="sound">
@@ -41,6 +49,13 @@
           <div id="credits" class="digits"></div>
           <div id="creditsPlayed" class="digits"></div>
         </section>
+<!-- 
+        <div id="buttonsOnlyForSmallScreen">
+          <button >RESET</button>
+            <button >
+              <img  src="./src/imgs/music-on.png" alt="music" />
+            </button>
+          </div> -->
 
         <section id="buttons">
           <button id="playTable">
@@ -52,6 +67,8 @@
         </section>
       </main>
     </div>
+
+    
     <div class="secondPage">
       <table>
         <thead>
